whatsapp text msg changes

--- a/privacy.html
+++ b/privacy.html
@@ -302,7 +302,7 @@
                 ><i class="fab fa-linkedin-in text-xl"></i
               ></a>
               <a
-                href="https://wa.me/7794945385"
+                href="https://wa.me/917794945385?text=Hello%20Loveappslab%20Team%2C%0A%0AI%20am%20interested%20in%20your%20Mobile%20and%20Web%20Application%20development%20services.%20Can%20you%20please%20share%20more%20details%3F%0A%0AThank%20you!"
                 target="_blank"
                 class="text-gray-400 hover:text-white transition-colors"
                 ><i class="fab fa-whatsapp text-xl"></i
@@ -389,7 +389,7 @@
 
     <!-- Floating WhatsApp Button -->
     <a
-      href="https://wa.me/7794945385"
+      href="https://wa.me/917794945385?text=Hello%20Loveappslab%20Team%2C%0A%0AI%20am%20interested%20in%20your%20Mobile%20and%20Web%20Application%20development%20services.%20Can%20you%20please%20share%20more%20details%3F%0A%0AThank%20you!"
       target="_blank"
       class="fixed bottom-6 right-6 bg-green-500 text-white w-14 h-14 rounded-full flex items-center justify-center shadow-lg hover:bg-green-600 transition-transform transform hover:scale-110"
     >
