--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>
       Web & Mobile App Development Company in Visakhapatnam | LoveAppsLab
     </title>
+    <link rel="icon" type="image/png" href="img/favicon.png" />
+
     <meta
       name="description"
       content="LoveAppsLab is a leading Web & Mobile App Development company in Visakhapatnam, India. We build fast, scalable, and user-friendly websites & mobile apps to help businesses grow online. Contact us today!"
@@ -78,7 +80,7 @@
       >
         <a href="index.html">
           <img
-            src="img/logo.svg"
+            src="img/logo.png"
             alt="Website Development Company Vizag"
             class="h-8 w-auto"
           />
@@ -440,7 +442,7 @@
           <div>
             <a href="index.html">
               <img
-                src="img/logo.svg"
+                src="img/logo.png"
                 alt="Website Development Company Vizag"
                 class="h-8 w-auto mb-4"
               />
@@ -452,12 +454,14 @@
             </p>
             <div class="flex space-x-4 justify-center md:justify-start">
               <a
-                href="#"
+                href="https://www.facebook.com/share/164zUqGC2A/"
+                target="_blank"
                 class="text-gray-400 hover:text-white transition-colors"
                 ><i class="fab fa-facebook-f text-xl"></i
               ></a>
               <a
-                href="#"
+                href="https://www.instagram.com/loveappslab?igsh=MTdwZjk5azZod3B1bA=="
+                target="_blank"
                 class="text-gray-400 hover:text-white transition-colors"
                 ><i class="fab fa-instagram text-xl"></i
               ></a>
