--- a/services.html
+++ b/services.html
@@ -7,6 +7,8 @@
       Our Services - Web & Mobile App Development Company in Visakhapatnam |
       LoveAppsLab
     </title>
+    <link rel="icon" type="image/png" href="img/favicon.png" />
+
     <meta
       name="description"
       content="Discover LoveAppsLab services in Visakhapatnam - Web Development, Mobile App Development, UI/UX Design, and Custom Software Solutions. We help businesses grow with modern digital solutions."
@@ -90,7 +92,7 @@
       >
         <a href="index.html">
           <img
-            src="img/logo.svg"
+            src="img/logo.png"
             alt="Loveappslab.com Logo"
             class="h-8 w-auto"
           />
@@ -397,7 +399,7 @@
           <div>
             <a href="index.html">
               <img
-                src="img/logo.svg"
+                src="img/logo.png"
                 alt="Loveappslab.com Logo"
                 class="h-8 w-auto mb-4"
               />
@@ -409,12 +411,14 @@
             </p>
             <div class="flex space-x-4 justify-center md:justify-start">
               <a
-                href="#"
+                href="https://www.facebook.com/share/164zUqGC2A/"
+                target="_blank"
                 class="text-gray-400 hover:text-white transition-colors"
                 ><i class="fab fa-facebook-f text-xl"></i
               ></a>
               <a
-                href="#"
+                href="https://www.instagram.com/loveappslab?igsh=MTdwZjk5azZod3B1bA=="
+                target="_blank"
                 class="text-gray-400 hover:text-white transition-colors"
                 ><i class="fab fa-instagram text-xl"></i
               ></a>
