--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
       About Us - LoveAppsLab | Web & Mobile App Development Company in
       Visakhapatnam
     </title>
+    <link rel="icon" type="image/png" href="img/favicon.png" />
+
     <meta
       name="description"
       content="Learn about LoveAppsLab, a trusted Web & Mobile App Development company in Visakhapatnam, India. We create innovative websites and mobile apps to help businesses grow digitally."
@@ -72,7 +74,7 @@
       >
         <a href="index.html">
           <img
-            src="img/logo.svg"
+            src="img/logo.png"
             alt="Loveappslab.com Logo"
             class="h-8 w-auto"
           />
@@ -204,7 +206,7 @@
           <div>
             <a href="index.html">
               <img
-                src="img/logo.svg"
+                src="img/logo.png"
                 alt="Loveappslab.com Logo"
                 class="h-8 w-auto mb-4"
               />
@@ -216,12 +218,14 @@
             </p>
             <div class="flex space-x-4 justify-center md:justify-start">
               <a
-                href="#"
+                href="https://www.facebook.com/share/164zUqGC2A/"
+                target="_blank"
                 class="text-gray-400 hover:text-white transition-colors"
                 ><i class="fab fa-facebook-f text-xl"></i
               ></a>
               <a
-                href="#"
+                href="https://www.instagram.com/loveappslab?igsh=MTdwZjk5azZod3B1bA=="
+                target="_blank"
                 class="text-gray-400 hover:text-white transition-colors"
                 ><i class="fab fa-instagram text-xl"></i
               ></a>
