--- a/privacy.html
+++ b/privacy.html
@@ -7,6 +7,8 @@
       Privacy Policy - LoveAppsLab | Web & Mobile App Development in
       Visakhapatnam
     </title>
+    <link rel="icon" type="image/png" href="img/favicon.png" />
+
     <meta
       name="description"
       content="Read the Privacy Policy of LoveAppsLab, a Web & Mobile App Development company in Visakhapatnam, India. Learn how we collect, use, and protect your personal information."
@@ -94,7 +96,7 @@
       >
         <a href="index.html">
           <img
-            src="img/logo.svg"
+            src="img/logo.png"
             alt="Loveappslab.com Logo"
             class="h-8 w-auto"
           />
@@ -275,7 +277,7 @@
           <div>
             <a href="index.html">
               <img
-                src="img/logo.svg"
+                src="img/logo.png"
                 alt="Loveappslab.com Logo"
                 class="h-8 w-auto mb-4"
               />
@@ -287,12 +289,14 @@
             </p>
             <div class="flex space-x-4 justify-center md:justify-start">
               <a
-                href="#"
+                href="https://www.facebook.com/share/164zUqGC2A/"
+                target="_blank"
                 class="text-gray-400 hover:text-white transition-colors"
                 ><i class="fab fa-facebook-f text-xl"></i
               ></a>
               <a
-                href="#"
+                href="https://www.instagram.com/loveappslab?igsh=MTdwZjk5azZod3B1bA=="
+                target="_blank"
                 class="text-gray-400 hover:text-white transition-colors"
                 ><i class="fab fa-instagram text-xl"></i
               ></a>
