meta google tag added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
       Web & Mobile App Development Company in Visakhapatnam | LoveAppsLab
     </title>
     <link rel="icon" type="image/png" href="img/favicon.png" />
-
+    <meta
+      name="google-site-verification"
+      content="LWYDkuLAU3NITZGa8KaMVPOrO96eKx7gr_MGOELk4Qk"
+    />
     <meta
       name="description"
       content="LoveAppsLab is a leading Web & Mobile App Development company in Visakhapatnam, India. We build fast, scalable, and user-friendly websites & mobile apps to help businesses grow online. Contact us today!"
