--- a/privacy.html
+++ b/privacy.html
@@ -8,7 +8,10 @@
       Visakhapatnam
     </title>
     <link rel="icon" type="image/png" href="img/favicon.png" />
-
+    <meta
+      name="google-site-verification"
+      content="LWYDkuLAU3NITZGa8KaMVPOrO96eKx7gr_MGOELk4Qk"
+    />
     <meta
       name="description"
       content="Read the Privacy Policy of LoveAppsLab, a Web & Mobile App Development company in Visakhapatnam, India. Learn how we collect, use, and protect your personal information."
