--- a/services.html
+++ b/services.html
@@ -8,7 +8,10 @@
       LoveAppsLab
     </title>
     <link rel="icon" type="image/png" href="img/favicon.png" />
-
+    <meta
+      name="google-site-verification"
+      content="LWYDkuLAU3NITZGa8KaMVPOrO96eKx7gr_MGOELk4Qk"
+    />
     <meta
       name="description"
       content="Discover LoveAppsLab services in Visakhapatnam - Web Development, Mobile App Development, UI/UX Design, and Custom Software Solutions. We help businesses grow with modern digital solutions."
