--- a/about.html
+++ b/about.html
@@ -8,7 +8,10 @@
       Visakhapatnam
     </title>
     <link rel="icon" type="image/png" href="img/favicon.png" />
-
+    <meta
+      name="google-site-verification"
+      content="LWYDkuLAU3NITZGa8KaMVPOrO96eKx7gr_MGOELk4Qk"
+    />
     <meta
       name="description"
       content="Learn about LoveAppsLab, a trusted Web & Mobile App Development company in Visakhapatnam, India. We create innovative websites and mobile apps to help businesses grow digitally."
