--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,10 @@
       Visakhapatnam
     </title>
     <link rel="icon" type="image/png" href="img/favicon.png" />
-
+    <meta
+      name="google-site-verification"
+      content="LWYDkuLAU3NITZGa8KaMVPOrO96eKx7gr_MGOELk4Qk"
+    />
     <meta
       name="description"
       content="Get in touch with LoveAppsLab, a Web & Mobile App Development company in Visakhapatnam, India. Contact us today for websites, mobile apps, and digital solutions."
